test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/whitespace_after_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(label2)
  ;
  return
  const int(0)
  ;
  identifier(label1)
  :
  identifier(label2)
  :
  return
  const int(1)
  ;
  }
