test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_without_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(foo)
  :
  }
